--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,3 @@
-/* Estilos específicos da página inicial */
-.container {
-    max-width: 1256px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
 /* Cabeçalho */
 .header__container {
     box-sizing: border-box;
@@ -22,6 +15,7 @@
     border-bottom: 2px solid var(--brand-1);
     z-index: 1000;
 }
+
 #header__button {
     padding: 10px 20px;
     border: none;
@@ -31,9 +25,9 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     background-color: var(--gray-1);
-    color: white;
-    border: ;
+    color: white;    
 }
+
 #header__button:hover {
     background-color: var(--brand-2);
 }
@@ -48,6 +42,7 @@
     background: var(--gray-3);
     color: var(--gray-6);
 }
+
 /* Título do Banner */
 .banner__title {
     font-size: var(--title1-fontsize);
@@ -59,9 +54,11 @@
     max-width: 1085px;
     margin: 0 auto;
 }
+
 .banner__title span {
     color: blue;
 }
+
 /* Descrição do Banner */
 .banner__description {
     font-size: var(--text1-fontsize);
@@ -73,6 +70,7 @@
     max-width: 770px;
     margin: 0 auto;
 }
+
 /* Botão no Banner */
 .banner__button {
     padding: 20px 32px;
@@ -93,6 +91,7 @@
     margin: 0 auto;
     margin-top: 20px;
 }
+
 .banner__button:hover {
     background-color: var(--brand-2);
 }
@@ -106,11 +105,13 @@
     padding: 16px 20px;
     background: var(--gray-2);
 }
+
 /* Frames da seção About */
 .about__frame--left,
 .about__frame--right {
     flex: 1;
 }
+
 /* Título da Seção About */
 .about__title {
     font-size: var(--title2-fontsize);
@@ -118,6 +119,7 @@
     line-height: var(--title2-lineheight);
     color: var(--gray-6);
 }
+
 /* Texto da Seção About */
 .about__text {
     font-size: var(--text1-fontsize);
@@ -141,6 +143,7 @@
     min-height: 1132px;
     margin-top: 0px;
 }
+
 #faq__button {
     padding: 10px 20px;
     border: none;
@@ -153,6 +156,7 @@
     color: white;
     margin-top: 20px;
 }
+
 /* Frame esquerdo da seção FAQ */
 .faq__frame--left {
     width: 50%;
@@ -160,6 +164,7 @@
     position: sticky;
     top: 110px;
 }
+
 /* Frame direito da seção FAQ */
 .faq__frame--right {
     width: 50%;
@@ -168,6 +173,7 @@
     gap: 60px;
     margin-left: auto;
 }
+
 /* Título da seção FAQ */
 .faq__title {
     font-size: var(--title2-fontsize);
@@ -176,6 +182,7 @@
     color: var(--gray-6);
     margin-bottom: 20px;
 }
+
 /* Descrição na seção FAQ */
 .faq__description {
     font-size: var(--text1-fontsize);
@@ -184,6 +191,7 @@
     text-align: justify;
     color: var(--gray-4);
 }
+
 /* Perguntas individuais na seção FAQ */
 .faq__item {
     display: flex;
@@ -191,6 +199,7 @@
     gap: 20px;
     margin-bottom: 50px;
 }
+
 /* Título de cada pergunta */
 .faq__item-title {
     font-size: var(--title3-fontsize);
@@ -198,6 +207,7 @@
     line-height: var(--title3-lineheight);
     color: var(--gray-6);
 }
+
 /* Descrição de cada pergunta */
 .faq__item-text {
     font-size: var(--text1-fontsize);
@@ -221,6 +231,7 @@
     position: relative;
     margin-top: 0px;
 }
+
 /* Estilo ajustado para o Frame 10 (lista de comentários) */
 .frame__10 {
     display: flex;
@@ -229,6 +240,7 @@
     gap: 35px;
     width: 100%;
 }
+
 .comments__item {
     display: flex;
     flex-direction: row;
@@ -239,18 +251,21 @@
     padding: 10px;
     margin-bottom: 20px;
 }
+
 .comments__author {
     font-size: var(--title3-fontsize);
     font-weight: var(--title3-fontweight);
     line-height: var(--title3-lineheight);
     color: var(--gray-6);
 }
+
 .comments__item div p {
     font-size: var(--text1-fontsize);
     font-weight: var(--text1-fontweight);
     line-height: var(--text1-lineheight);
     color: var(--gray-6);
 }
+
 .comments p {
     font-style: normal;
     font-size: var(--text1-fontsize);
@@ -259,6 +274,7 @@
     text-align: justify;
     color: var(--gray-5);
 }
+
 .comments__text {
     font-style: normal;
     font-size: var(--text1-fontsize);
@@ -268,6 +284,7 @@
     color: var(--gray-5);
     width: 70%;
 }
+
 .frame__11 {
     display: flex;
     flex-direction: column;
@@ -278,6 +295,7 @@
     position: sticky;
     top: 110px;
 }
+
 .comments__title {
     font-size: var(--title2-fontsize);
     font-weight: var(--title2-fontweight);
@@ -286,6 +304,7 @@
     padding: 10px;
     margin-left: 10px;
 }
+
 #comment_title_text {
     padding: 20px;
 }
@@ -296,7 +315,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 20px 236px;
+    /* padding: 20px 236px; */
     background: var(--gray-1);
     justify-content: center;
 }
@@ -314,6 +333,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.4);
     padding-top: 130px;
 }
+
 .modal-content {
     box-sizing: border-box;
     display: flex;
@@ -329,8 +349,8 @@ footer {
     background: #212529;
     border: 2px solid #4C6EF5;
     margin-top: 50px;
-
 }
+
 .modal-header {
     display: flex;
     flex-direction: row;
@@ -338,6 +358,7 @@ footer {
     align-items: center;
     width: 100%;
 }
+
 .modal-header h2 {
     color: #F8F9FA;
     text-align: center;
@@ -346,6 +367,7 @@ footer {
     font-weight: var(--title3-fontweight);
     line-height: var(--title3-lineheight);
 }
+
 .close-button {
     width: 38px;
     height: 32px;
@@ -358,6 +380,7 @@ footer {
     text-align: center;
     cursor: pointer;
 }
+
 .modal p {
     font-size: var(--text3-fontsize);
     font-weight: var(--text3-fontweight);
@@ -365,11 +388,13 @@ footer {
     color: #ADB5BD;
     width: 100%;
 }
+
 .modal-footer {
     width: 100%;
     display: flex;
     justify-content: center;
 }
+
 .modal-button {
     display: flex;
     flex-direction: row;
@@ -387,35 +412,135 @@ footer {
     line-height: 150%;
     cursor: pointer;
 }
+
 .email-form {
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 14px 20px;
     gap: 10px;
-    width: 448px;    
-    margin: 0 auto;    
+    width: 448px;
+    margin: 0 auto;
 }
+
 .email-input {
-    flex-grow: 1;    
+    flex-grow: 1;
     height: 60px;
     background: #191C1F;
     border: 1px solid #191C1F;
     color: #ADB5BD;
     font-size: 20px;
-    line-height: 20px;    
+    line-height: 20px;
     padding: 14px 20px;
-    margin-right: 10px;    
+    margin-right: 10px;
 }
+
 .email-input::placeholder {
     color: #ADB5BD;
 }
+
 .submit-button {
-    width: auto;    
-    height: 60px;    
-    background: #4C6EF5;    
-    color: #F8F9FA;    
-    border: none;    
+    width: auto;
+    height: 60px;
+    background: #4C6EF5;
+    color: #F8F9FA;
+    border: none;
     font-size: 16px;
     cursor: pointer;
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+   
+    /* Reorganiza os elementos principais em uma única coluna */
+    .header__container,
+    .banner,
+    .about,
+    .faq,
+    .comments,
+    footer,
+    .about__frame--left,
+    .about__frame--right,
+    .faq__frame--left,
+    .faq__frame--right,
+    .comments__item,
+    .frame__10,
+    .frame__11 {
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .faq__frame--left {
+        position: static;
+    }
+
+    .frame__10 {
+        order: 2;
+    }
+
+    .frame__11 {
+        order: 1;
+    }
+
+    /* Ajuste de largura para elementos interativos */
+    .banner__button,
+    .email-form,
+    .modal-button,
+    .email-input,
+    .submit-button {
+        width: clamp(50%, 90%, 100%);
+    }
+
+    /* Ajustes para itens de comentários e modal */
+    .comments__item,
+    .modal-content,
+    .modal-header,
+    .modal-footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .comments__item div,
+    .comments__text,
+    .comments__author,
+    .comments p,
+    .modal p {
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Ajustes adicionais para modal */
+    .modal {
+        padding-top: 20px;
+    }
+
+    .modal-content {
+        width: clamp(75%, 90%, 95%);
+        height: auto;
+        margin-top: 20px;
+        padding: 10px;
+    }
+
+    .close-button {
+        align-self: flex-end;
+    }
+
+    .header__container {
+        justify-content: center;
+    }
+
+    .header__logo {
+        margin: 0 auto;
+        justify-content: center;
+    }
+
+    .footer__logo {
+        max-width: 30%;        
+        height: auto;        
+        object-fit: contain;        
+        margin: 0 auto;
+    }
+
+    .modal-open-button {
+        display: none;
+    }
 }
