--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -228,7 +228,7 @@
     gap: 16px;
     background: var(--gray-3);
     margin: 0 auto;
-    max-width: 1256px;
+    /* max-width: 1256px; */
     width: 100%;
     padding: 22px 20px;
     position: relative;
