--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -499,7 +499,7 @@ footer {
     .email-form,
     .modal-button,
     .email-input,
-    .submit-button {
+    .submit-button {        
         width: clamp(50%, 90%, 100%);
     }
 
@@ -510,6 +510,7 @@ footer {
     .modal-footer {
         flex-direction: column;
         align-items: center;
+        font-size: 14px;
     }
 
     .comments__item div,
@@ -523,14 +524,38 @@ footer {
 
     /* Ajustes adicionais para modal */
     .modal {
-        padding-top: 20px;
+        display: flex;
+        padding-top: 20px;                
+        margin: 0 auto;
+        /* border: red 2px solid; */
+        align-items: center;
+        justify-content: center;        
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);   
+        position: fixed;  
+        margin-top: 30px;           
     }
 
     .modal-content {
-        width: clamp(75%, 90%, 95%);
-        height: auto;
-        margin-top: 20px;
-        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;        
+        width: clamp(75%, 90%, 95%);          
+        width: 100%;   
+        margin: 0;   
+    }
+
+    .modal-footer {
+        font-size: 14px;
+    }
+
+    .modal p {
+        font-size: 14px;
+    }
+
+    .modal-button {
+        font-size: 14px;
     }
 
     .close-button {
@@ -555,5 +580,14 @@ footer {
 
     #header__button {
         display: none;
+    }
+
+    .email-input {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .submit-button{
+        display: none;        
     }
 }
