--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -358,13 +358,13 @@ footer {
     padding: 10px 18px;
     gap: 10px;
     position: absolute;
-    width: 504px;
+    max-width: 504px;
     height: 316px;
     left: calc(50% - 252px);
     top: calc(50% - 208px);
     background: #212529;
     border: 2px solid #4C6EF5;
-    margin-top: 50px;
+    margin-top: 50px;    
 }
 
 .modal-header {
@@ -505,8 +505,7 @@ footer {
 
     /* Ajustes para itens de comentários e modal */
     .comments__item,
-    .modal-content,
-    .modal-header,
+    .modal-content,    
     .modal-footer {
         flex-direction: column;
         align-items: center;
@@ -524,32 +523,37 @@ footer {
 
     /* Ajustes adicionais para modal */
     .modal {
-        /* display: flex;
-        padding-top: 20px;                
-        margin: 0 auto;
-        /* border: red 2px solid; */
-        /* align-items: center; */
-        /* justify-content: center;        
+        display: flex;        
+        align-items: center;
+        justify-content: center;        
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);   
         position: fixed;  
-        margin-top: 30px;             */
-        
+        margin-top: 50px; 
+        width: 350px;        
+    }
+
+    .modal-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-left: 12px;
+        padding-right: 12px;
     }
 
     .modal-content {
         display: flex;
         align-items: center;
-        justify-content: center;        
-        width: clamp(75%, 90%, 95%);          
-        width: 100%;   
-        margin: 0;   
-
+        justify-content: center;         
+        padding-left: 75px;
+        margin-left: 20px;        
+        border: 2px blue solid;
     }
 
     .modal-footer {
         font-size: 14px;
+        height: 25px;
     }
 
     .modal p {
@@ -562,6 +566,7 @@ footer {
 
     .close-button {
         align-self: flex-end;
+        margin-top: 0px;        
     }
 
     .header__container {
@@ -586,6 +591,7 @@ footer {
 
     .email-input {
         width: 100%;
+        height: 25px;
         font-size: 14px;
     }
 
