--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,7 +40,8 @@
     padding: 150px 20px;
     gap: 10px;
     background: var(--gray-3);
-    color: var(--gray-6);    
+    color: var(--gray-6);  
+    margin: 0, 15px;  
 }
 
 /* Título do Banner */
@@ -105,7 +106,7 @@
     flex-direction: row;
     align-items: center;
     gap: 16px;
-    padding: 16px 20px;
+    padding: 16px 50px;
     background: var(--gray-1);
 }
 
@@ -137,7 +138,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 32px 20px;
+    padding: 32px 50px;
     gap: 16px;
     background: var(--gray-3);
     color: var(--gray-6);
@@ -209,6 +210,7 @@
     font-weight: var(--title3-fontweight);
     line-height: var(--title3-lineheight);
     color: var(--gray-6);
+    margin: 0 auto;
 }
 
 /* Descrição de cada pergunta */
@@ -230,7 +232,7 @@
     margin: 0 auto;
     /* max-width: 1256px; */
     width: 100%;
-    padding: 22px 20px;
+    padding: 22px 50px;
     position: relative;
     margin-top: 0px;
 }
@@ -241,16 +243,15 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 35px;    
-    width: 50%;
-    max-width: 620px;
+    /* width: 60%; */
+    max-width: 600px;
     padding-right: 23px;
 }
 
 .comments__item {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    gap: 30px;
+    align-items: flex-start;    
     justify-content: space-between;
     align-items: center;
     padding-right: 10px;
@@ -281,31 +282,24 @@
     font-weight: var(--text1-fontweight);
     line-height: var(--text1-lineheight);
     text-align: justify;
-    color: var(--gray-5);
+    color: var(--gray-5);    
 }
 
-.comments__text {
-    font-style: normal;
-    font-size: var(--text1-fontsize);
-    font-weight: var(--text1-fontweight);
-    line-height: var(--text1-lineheight);
-    text-align: justify;
-    color: var(--gray-5);
-    width: 70%;
+.comments__text {    
+    width: 60%;
 }
 
 .frame__11 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 35px;
-    width: 50%;
+    gap: 10px;    
     background-color: var(--brand-1);
     position: sticky;
-    top: 110px;
-    max-width: 580px;
-    max-height: 443px;
-    margin: 0 auto;
+    top: 110px;    
+    max-height: 443px;    
+    margin-left: 50px;    
+    max-width: 420px;
 }
 
 .comments__title {
@@ -315,10 +309,12 @@
     color: var(--gray-7);
     padding: 10px;
     margin-left: 10px;
+    margin-top: 10px;
 }
 
 #comment_title_text {
     padding: 20px;
+    margin-bottom: 20px;
 }
 
 /* Footer  */
