--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -292,14 +292,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-evenly;    
     gap: 10px;    
     background-color: var(--brand-1);
     position: sticky;
     top: 110px;      
-    max-height: 443px;    
-    margin-left: 50px;    
+    max-height: 400px;      
     max-width: 520px;    
-    margin-left: 100px;    
 }
 
 .comments__title {
@@ -341,7 +340,7 @@ footer {
     top: 10px;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    /* overflow: auto; */
     background-color: rgba(0, 0, 0, 0.4);
     padding-top: 130px;
 }
@@ -351,10 +350,12 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-around;
     padding: 10px 18px;
     gap: 10px;
     position: absolute;
-    max-width: 504px;
+    max-width: 90%;
+    max-width: 575px;
     height: 316px;
     left: calc(50% - 252px);
     top: calc(50% - 208px);
@@ -488,6 +489,7 @@ footer {
 
     .frame__11 {
         order: 1;
+        position: static;
     }
 
     /* Ajuste de largura para elementos interativos */
@@ -527,7 +529,8 @@ footer {
         transform: translate(-50%, -50%);   
         position: fixed;  
         margin-top: 50px; 
-        width: 350px;        
+        width: 100%; 
+        /* max-width: 250px;        */
     }
 
     .modal-header {
@@ -541,10 +544,12 @@ footer {
     .modal-content {
         display: flex;
         align-items: center;
-        justify-content: center;         
-        padding-left: 75px;
-        margin-left: 20px;        
+        justify-content: center;
+        align-content: space-between;         
+        padding-left: 50px;
+        /* margin-left: 20px;         */
         border: 2px blue solid;
+        max-width: 450px;
     }
 
     .modal-footer {
